# Chaitanya_coding_Agent

./: .env.example  .gitignore  CLI_CHAT_GUIDE.md  COMPLETE_ARCHITECTURE.md  CONCEPTS_GUIDE.md  DEVELOPER_CHEATSHEET.md  DOCS_COMPLETE.md  DOCUMENTATION_INDEX.md  EXTENSION_FEATURES.md  EXTENSION_USAGE_GUIDE.md  KIRO_IDE_INTEGRATION.md  MCP_GUIDE.md  MCP_INTEGRATION_SUMMARY.md  MCP_SERVER_SETUP.md  PRODUCTION_ROADMAP.md  QUICK_FIX_KEYBINDING.md  QUICK_REFERENCE.md  QUICK_START_EXTENSION.md  README.md  README_VS_CODE.md  SPEED_OPTIMIZATION_GUIDE.md  START_HERE.md  TROUBLESHOOTING_KEYBINDING.md  USAGE_GUIDE.md  VS_CODE_GUIDE.md  agent.py  approval_bridge.py  build_app_example.py  cli.py  cli_chat.py  cnn.md  config.py  database.py  examples.py  file_operations.py  full_app_example.py  kiro-mcp-config.json  kiro_agent.db  kiro_ide_integration.py  llm_client.py  (+19 more)
benchmarks/: bench_strings.py
kiro-vscode-extension/: .gitignore  .vscodeignore  README.md  build.cmd  build.sh  extension.js  package-lock.json  package.json
templates/: chat.html  mcp_management.html
vscode-extension/: README.md  kiro-agent-0.1.0.vsix  package-lock.json  package.json
vscode-extension/src/: extension.ts
