[project]
name = "chaitanya-coding-agent"
version = "0.1.0"
description = "AI Coding Agent with MCP integration, web search, PDF scanning, and vector search"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.0.50",
    "typer>=0.9.0",
    "colorama>=0.4.6",
    "aiohttp>=3.9.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
    "sentence-transformers>=2.2.0",
    "PyPDF2>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
